--- a/styleAlumno.css
+++ b/styleAlumno.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background:url(Imagenes/abstract-2092071_1920.jpg)
 }
 
 header {
