--- a/styleAlumno.css
+++ b/styleAlumno.css
@@ -19,6 +19,14 @@ h1, h2 {
 section {
     margin: 20px;
 }
+ol {
+    list-style-type: decimal;
+    margin-left: 20px;
+    color: rgb(5, 15, 8);
+    background-color: rgb(249, 127, 255);
+   
+
+}
 
 footer {
     background-color: #333;
